--- a/css/main.css
+++ b/css/main.css
@@ -1063,9 +1063,35 @@ input::selection {
   font-size: 85%;
 }
 
-.icon-container {
+.tag-container {
   display: flex;
   flex-wrap: wrap;
+
+  max-height: 156px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.tag-container::-webkit-scrollbar {
+  width: 8px
+}
+
+.tag-container::-webkit-scrollbar-thumb {
+  background: hsla(0, 0%, 53%, .2);
+  border-radius: 4px;
+}
+
+.tag-container:hover::-webkit-scrollbar-thumb {
+  background: hsla(0, 0%, 53%, .4);
+  border-radius: 4px;
+}
+
+.tag-container::-webkit-scrollbar-thumb:hover {
+  background: hsla(0, 0%, 53%, .8);
+}
+
+.tag-container:hover::-webkit-scrollbar-track {
+  background: hsla(0, 0%, 53%, .1);
 }
 
 .tag-item {
