--- a/css/main.css
+++ b/css/main.css
@@ -1108,7 +1108,12 @@ input::selection {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+
+  color: black;
+  text-decoration: none;
 }
+
+.tag-item:hover { text-decoration: none; }
 
 .tag-item:hover {
   background-color: #ccc;
