--- a/css/main.css
+++ b/css/main.css
@@ -1123,4 +1123,35 @@ input::selection {
   top: 16px;
 }
 
+#dropdown {
+  padding: 10px 0px 10px 0px;
+  border-radius: 10px;
+  background-color: white;
+  color: black;
+  width: 450px;
+  display: none;
+  list-style-type: none;
+}
+
+#dropdown li {
+  padding: 10px;
+  display: flex;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+#dropdown li span:nth-of-type(1) {
+  padding-left: 12px;
+  font-size: 17px;
+  width: 100%;
+}
+
+#dropdown li span:nth-of-type(2) {
+  font-size: 17px;
+  color: grey;
+}
+
+#dropdown li:hover {
+  background-color: #eee;
+}
 
