--- a/css/main.css
+++ b/css/main.css
@@ -1137,13 +1137,15 @@ input::selection {
   padding: 10px;
   display: flex;
   cursor: pointer;
-  overflow: hidden;
 }
 
 #dropdown li span:nth-of-type(1) {
   padding-left: 12px;
   font-size: 17px;
   width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 #dropdown li span:nth-of-type(2) {
