--- a/css/main.css
+++ b/css/main.css
@@ -1154,7 +1154,8 @@ input::selection {
 
 #dropdown li span:nth-of-type(2) {
   padding-right: 8px;
-  font-size: 17px;
+  line-height: 17px;
+  font-size: 24px;
   color: grey;
 }
 
