--- a/css/main.css
+++ b/css/main.css
@@ -1061,26 +1061,38 @@ input::selection {
 }
 
 .scrollbar::-webkit-scrollbar {
-  width: 8px
+  width: 16px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(100, 100, 100, 0.2);
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.0);
+  border-radius: 8px;
+}
+
+/*
+.scrollbar::-webkit-scrollbar-track {
+  background: hsla(0, 0%, 53%, .1);
+  border-radius: 8px;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
   background: hsla(0, 0%, 53%, .2);
-  border-radius: 4px;
-}
-
-.scrollbar:hover::-webkit-scrollbar-thumb {
-  background: hsla(0, 0%, 53%, .4);
-  border-radius: 4px;
+  border-radius: 8px;
+  width: 6px; 
+  margin: 0 5px;
 }
 
 .scrollbar::-webkit-scrollbar-thumb:hover {
   background: hsla(0, 0%, 53%, .8);
 }
-
-.scrollbar:hover::-webkit-scrollbar-track {
-  background: hsla(0, 0%, 53%, .1);
-}
+*/
 
 .tag-container {
   display: flex;
@@ -1127,13 +1139,25 @@ input::selection {
   top: 16px;
 }
 
-#dropdown {
+.dropdown-container {
+  display: none;
+  width: 450px;
+  max-height: 342px;
+
+  margin-top: 16px;
+
   padding: 10px 0px 10px 0px;
+
   border-radius: 10px;
   background-color: white;
   color: black;
-  width: 450px;
-  display: none;
+
+  overflow-y: auto;
+}
+
+#dropdown {
+  padding: 0px;
+  margin: 0px;
   list-style-type: none;
 }
 
@@ -1144,10 +1168,10 @@ input::selection {
 }
 
 #dropdown li span:nth-of-type(1) {
-  padding-left: 12px;
+  padding-left: 8px;
   font-size: 17px;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
