--- a/js/lib/search-control/search-control.css
+++ b/js/lib/search-control/search-control.css
@@ -1,5 +1,5 @@
 .search-container {
-  font-family: 'Tahoma', 'Verdana', 'Arial', sans-serif;
+  font-family: sans-serif;
   color: black;
   background: white;
   width: 220px;
