--- a/js/lib/search-control/search-control.css
+++ b/js/lib/search-control/search-control.css
@@ -105,7 +105,7 @@
 }
 
 .search-container:focus-within:has(.search-list:not(:empty)) .search-list-container {
-  max-height: 287px;  /* 40*7 + 1px border + search-list:padding-bottom */
+  max-height: 289px;  /* 40*7 + 1px border + search-list:padding */
   overflow: auto;
   border-top: 1px solid rgba(0,0,0,0.1);
   transition: all 0.3s ease;
@@ -115,7 +115,8 @@
   padding: 0;
   margin: 0px;
   list-style-type: none;
-  padding-bottom: 6px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .search-list li {
