--- a/js/lib/search-control/search-control.css
+++ b/js/lib/search-control/search-control.css
@@ -105,8 +105,9 @@
 }
 
 .search-container:focus-within:has(.search-list:not(:empty)) .search-list-container {
-  max-height: 289px;  /* 40*7 + 1px border + search-list:padding */
+  max-height: 287px;  /* 40*7 + 1px border + search-list:padding */
   overflow: auto;
+  margin-top: 2px;
   border-top: 1px solid rgba(0,0,0,0.1);
   transition: all 0.3s ease;
 }
@@ -115,7 +116,7 @@
   padding: 0;
   margin: 0px;
   list-style-type: none;
-  padding-top: 4px;
+  padding-top: 2px;
   padding-bottom: 4px;
 }
 
