--- a/css/main.css
+++ b/css/main.css
@@ -994,37 +994,6 @@ input::selection {
   margin-bottom: 5px;
 }
 
-.tag-container {
-  display: flex;
-  flex-wrap: wrap;
-  max-height: 204px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.tag-item {
-  margin: 1px;
-  padding: 1px;
-  padding-left: 7px;
-  padding-right: 7px;
-  background-color: #eee;
-  border-radius: 16px;
-  cursor: pointer;
-  font-size: 90%;
-  max-width: 320px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  color: black;
-  text-decoration: none;
-}
-
-.tag-item:hover { text-decoration: none; }
-
-.tag-item:hover {
-  //opacity: .8; // somehow makes the whole window blurry
-}
-
 #language-selector {
   z-index: 1;
   position: absolute;
@@ -1052,3 +1021,67 @@ input::selection {
   background: rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
+
+.tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-height: 204px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  transition: all 0.3s ease;
+}
+
+.tag-item {
+  margin: 1px;
+  padding: 1px;
+  padding-left: 7px;
+  padding-right: 7px;
+  background-color: #eee;
+  border-radius: 16px;
+  cursor: pointer;
+  max-width: 320px;
+  transition: all 0.3s ease;
+  max-height: 
+}
+
+.tag-title {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+  font-size: 90%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  color: black;
+  text-decoration: none;
+}
+
+.tag-title:hover { text-decoration: none; }
+
+/*
+.tag-image {
+  display: inline-block;
+  max-height: 0px;
+}
+
+.tag-item:focus-within .tag-image{
+  width: 100%;
+  max-height: 300px;
+  transition: all 0.3s ease;
+}
+*/
+
+.image-popup {
+  position: absolute;
+  z-index: 9999;
+  display: none;
+
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); 
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
