--- a/css/main.css
+++ b/css/main.css
@@ -1085,6 +1085,9 @@ input::selection {
   z-index: 9999;
   display: none;
 
+
+  transform: translateX(-50%) translateY(-100%);
+
   border: 2px solid rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); 
