--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html, body {
 h2 { font-size: 150%; text-align: center; padding-bottom: 0px; margin: 0; }
 h3 { font-size: 110%; text-align: center; padding-bottom: 8px; margin: 0; }
 
-a { text-decoration: none; color: #eee; }
+a { text-decoration: none; color: black; }
 a:hover { text-decoration: underline; }
 
 #map{
