--- a/css/main.css
+++ b/css/main.css
@@ -1102,8 +1102,8 @@ input::selection {
 
   #save-controls {
     top: auto;
-    left: 0px;
-    right: 0px;
+    left: auto;
+    right: auto;
     bottom: 42px;
     padding-left: 64px;
     padding-right: 64px;
